2008-07-31  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/36419
	* g++.dg/eh/async-unwind2.C: New test.

	PR c++/36405
	* g++.dg/rtti/typeid8.C: New test.

	PR debug/36278
	* g++.dg/debug/namespace2.C: New test.

	PR preprocessor/36649
	* gcc.dg/pch/cpp-3.c: New test.
	* gcc.dg/pch/cpp-3.hs: New file.
	* gcc.dg/pch/cpp-3a.h: New file.
	* gcc.dg/pch/cpp-3b.h: New file.

2008-07-30  Dodji Seketeli  <dseketel@redhat.com>

	PR c++/36767
	* g++.dg/parse/crash41.C: New test.

2008-07-29  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36852
	* g++.dg/pch/array-1.C: New test.
	* g++.dg/pch/array-1.Hs: New file.

2008-07-27  Tobias Burnus  <burnus@net-b.de>

	PR fortran/36132
	* gfortran.dg/internal_pack_4.f90: New.

2008-07-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/36852
	* gfortran.dg/namelist_52.f90: New test.

2008-07-25  Joseph Myers  <joseph@codesourcery.com>

	* lib/target-supports.exp (check_effective_target_arm_thumb1_ok):
	New.
	* g++.dg/inherit/thunk8.C: Use it.

2008-07-23  Ian Lance Taylor  <iant@google.com>

	* gcc.target/i386/20080723-1.c: New test.

2008-07-22  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* lib/target-supports.exp (check_effective_target_spu_auto_overlay):
	New procedure.
	* lib/compat.exp (compat-execute): Use it to test whether toolchain
	supports automatic overlay generation for the SPU.

2008-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/36877
	* gcc.dg/gomp/atomic-11.c: New test.

2008-07-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/36366
	* gfortran.dg/used_types_20.f90: New test.

2008-07-18  Dodji Seketeli  <dseketel@redhat.com>

	PR c++/36407
	* g++.dg/conversion/op5.C: New testcase.

2008-07-18  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/35281
	* gcc.target/i386/pr35281.c: New.

2008-07-17  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:

	2008-06-02  Andy Hutchinson  <hutchinsonandy@aim.com>
	* gcc.dg/torture/pr34330.c: Skip test for targets without pthread.