@@ -1,1 +1,4 @@
+#ifndef CPP_3_H
+#define CPP_3_H
 /* empty */
+#endif
