@@ -1,1 +1,4 @@
+#ifndef CPP_3A_H
+#define CPP_3A_H
 #include "cpp-3b.h"
+#endif
