@@ -1,1 +1,4 @@
+#ifndef CPP_3B_H
+#define CPP_3B_H
 /* empty */
+#endif
