@@ -1,3 +1,13 @@
+2008-07-31  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/36649
+	* files.c (struct report_missing_guard_data): New type.
+	(report_missing_guard): Put paths into an array instead of printing
+	them right away.  Return 1 rather than 0.
+	(report_missing_guard_cmp): New function.
+	(_cpp_report_missing_guards): Sort and print paths gathered by
+	report_missing_guard callback.
+
 2008-06-06  Release Manager
 
 	* GCC 4.3.1 released.
